--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
   "license": "MIT",
   "require": {
     "php": ">=7.0",
-    "illuminate/support": "*",
-    "illuminate/foundation": "*"
+    "illuminate/support": "*"
   },
   "require-dev": {
   },
